--- a/RpgApi/appsettings.json
+++ b/RpgApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "RPGDatabaseSettings": {
-    "RPGCollectionName": "RPG",
+    "RPGCollectionName": "Users",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "rpgDb"
   },
